# python_django

./: .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml  requirements.txt
mysite/BlogApp/: models.py  urls.py  views.py
mysite/BlogApp/migrations/: 0001_initial.py  0002_alter_autor_bio.py  0003_category.py  0004_tag.py  0005_article.py  0006_article_author.py  0007_article_category.py  0008_article_tags.py  0009_rename_autor_author_alter_author_options.py
mysite/myauth/: forms.py  models.py  urls.py  views.py
mysite/myauth/migrations/: 0001_initial.py  0002_profile_avatar.py  0003_alter_profile_avatar.py
mysite/mysite/: settings.py  sitemaps.py  urls.py
mysite/requestdataapp/: middlewares.py  urls.py  views.py
mysite/shopapp/: admin.py  admin_mixins.py  api.py  apps.py  common.py  forms.py  models.py  serializers.py  sitemap.py  tests.py  urls.py  views.py
mysite/shopapp/migrations/: 0001_initial.py  0002_product_archived_product_count_product_create_at_and_more.py  0003_order.py  0004_order_user.py  0005_product_discount.py  0006_order_products.py  0007_alter_order_options_alter_product_options.py  0008_product_created_by.py  0009_alter_product_created_by.py  0010_alter_order_options_alter_product_options.py
somesite/myauth/: urls.py  views.py
somesite/shopapp/: admin.py  admin_mixins.py  forms.py  middlewares.py  models.py  urls.py  views.py
somesite/shopapp/migrations/: 0001_initial.py  0002_product_archived_product_create_at_product_price.py  0003_order.py  0004_order_products.py
somesite/somesite/: settings.py  urls.py
(+53 files in other folders)
